OneDrive/Desktop/AWS CloudSec Microservices Platform Overview/authentication-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  labels:
    app: authentication-service
spec:
  selector:
    app: authentication-service
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  type: ClusterIP
